package com.swt.lab.task3.sw;

public interface SwitchAction {
    void on();

    void off();
}
