' Generated by UML Generator
' Encoded: XLLBZvim4BxpAtmakqdKCqhHSbYfbTfLf5JgsG67M0KRsKwYzB6_lHu_m3P4Uq7C-FCyllaONgJ2GbtwBfE_A1kmm3sgEonbfPIWnuiYNslE3lGtGP-oCsq8ggceEv9b1eKgAewuHNyoX3Owb2A5Snt00Ez6FvwjBvyZLd3QaA7ZztnLe2kd3NWWKsYtH1au-EBupz8VBGHt0VxvQj_mbRPOKSxsc97EbNsZgZv_nqE1z6DtCEQF-q3MoBwNw3DYv8Q-O0cmNPclniPmqrXGhlID0eMtvStROMTOFhYWGKVEEuAPx_WXpXe04wJdL_8O6HBe-mGIaqvTenDJUo8aPvOWXdi8g_N0sc3E5XBFsVhoy8RcOOOtKxz8N_SYKUeYM2NuXJM94DvqS72D1KNgYAkQgICi8bN7uKm7s_4DTvqiq3SgrUwdVY_1EH0-TCHvRPpIqXE9gaXL5b066MB2m9FFqgtHKh8r-YZLoFMOo31DUY9Qmkhe4zF88-tqXvtG2mL8y4NTmydUr3GUJHH40mXxdD4_rPMCD6e3mgGaZbDwzSrKDPowRrZ7jT57PXDSFa4C9zeJrC1Fftok1oF9QBTPrpX2R49xjqqqZTQAUmappMcAPwfIl6sxXvilpZudDmWszKAP8kA4Qn9LOBfwZqXuNoG1160fm6QnmkYT0EoczTkn4WBVZJ_SZtQrMwHCD_o2M-zJzw-mwVm-3o1svNs4qhnLOy6ZPbt9q5xwB-2RZT-hRlbjjwNtcDK02A1ZiYpGsa_QJaMRQdMx_Ll6OaaH4CN8s8dlQQpANJ3pWDosbUo5i4R_lly3
' URL: http://www.plantuml.com/plantuml/uml/XLLBZvim4BxpAtmakqdKCqhHSbYfbTfLf5JgsG67M0KRsKwYzB6_lHu_m3P4Uq7C-FCyllaONgJ2GbtwBfE_A1kmm3sgEonbfPIWnuiYNslE3lGtGP-oCsq8ggceEv9b1eKgAewuHNyoX3Owb2A5Snt00Ez6FvwjBvyZLd3QaA7ZztnLe2kd3NWWKsYtH1au-EBupz8VBGHt0VxvQj_mbRPOKSxsc97EbNsZgZv_nqE1z6DtCEQF-q3MoBwNw3DYv8Q-O0cmNPclniPmqrXGhlID0eMtvStROMTOFhYWGKVEEuAPx_WXpXe04wJdL_8O6HBe-mGIaqvTenDJUo8aPvOWXdi8g_N0sc3E5XBFsVhoy8RcOOOtKxz8N_SYKUeYM2NuXJM94DvqS72D1KNgYAkQgICi8bN7uKm7s_4DTvqiq3SgrUwdVY_1EH0-TCHvRPpIqXE9gaXL5b066MB2m9FFqgtHKh8r-YZLoFMOo31DUY9Qmkhe4zF88-tqXvtG2mL8y4NTmydUr3GUJHH40mXxdD4_rPMCD6e3mgGaZbDwzSrKDPowRrZ7jT57PXDSFa4C9zeJrC1Fftok1oF9QBTPrpX2R49xjqqqZTQAUmappMcAPwfIl6sxXvilpZudDmWszKAP8kA4Qn9LOBfwZqXuNoG1160fm6QnmkYT0EoczTkn4WBVZJ_SZtQrMwHCD_o2M-zJzw-mwVm-3o1svNs4qhnLOy6ZPbt9q5xwB-2RZT-hRlbjjwNtcDK02A1ZiYpGsa_QJaMRQdMx_Ll6OaaH4CN8s8dlQQpANJ3pWDosbUo5i4R_lly3
' Generated on: 2026-02-27T05:42:03.230888700

@startuml
skinparam classAttributeIconSize 0
hide circle

class Airbag {
  -state: AirbagState
  --
  +Airbag(state: AirbagState)
  +deploy(): void
  +hide(): void
  +getState(): AirbagState
  +setState(state: AirbagState): void
}

class NavigationPanel {
  -switchMap: Map<SwitchType, Switch> = new HashMap<>()
  --
  +addSwitch(type: SwitchType, sw: Switch): void
  +hasSwitch(type: SwitchType): boolean
  +getSwitch(type: SwitchType): Switch
  +removeSwitch(type: SwitchType): void
  +getSwitchMap(): Map<SwitchType,Switch>
}

class Person {
  -name: String
  -state: PersonState
  --
  +Person(name: String, state: PersonState)
  +useSwitch(sw: Switch): void
  +turnAround(): void
  +getName(): String
  +getState(): PersonState
  +setState(state: PersonState): void
}

class Ship {
  -walls: List<Wall>
  -people: List<Person>
  -navigationPanel: NavigationPanel
  -state: ShipState
  --
  +Ship(walls: List<Wall>, people: List<Person>, navigationPanel: NavigationPanel, state: ShipState)
  +emergency(): void
  +stabilize(): void
  +getWalls(): List<Wall>
  +getPeople(): List<Person>
  +getState(): ShipState
  +setState(state: ShipState): void
  +getNavigationPanel(): NavigationPanel
}

class EmergencyAction {
  -ship: Ship
  --
  +EmergencyAction(ship: Ship)
  +on(): void
  +off(): void
}

class Switch {
  -state: SwitchState
  -action: SwitchAction
  --
  +Switch(action: SwitchAction, state: SwitchState)
  +toggle(): void
  +getState(): SwitchState
  +setState(state: SwitchState): void
}

interface SwitchAction {
  ~on(): void
  ~off(): void
}

class Wall {
  -airbagList: List<Airbag> = new ArrayList<>()
  --
  +deployAirbags(): void
  +hideAirbags(): void
  +addAirbag(airbag: Airbag): void
  +removeAirbag(airbag: Airbag): void
  +getAirbagList(): List<Airbag>
}

NavigationPanel o-- Switch
Person ..> Switch
Ship o-- Wall
Ship o-- Person
Ship *-- NavigationPanel
EmergencyAction ..|> SwitchAction
EmergencyAction *-- Ship
Switch *-- SwitchAction
Wall o-- Airbag
@enduml